<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"
    android:id="@+id/mainHome">


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:id="@+id/flippermain"
        android:layout_margin="10sp"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp">
    <ImageButton
        android:id="@+id/room"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/baseline_bedroom_parent_24"
        android:layout_weight="1"
        android:padding="40dp"
        android:contentDescription="@string/room"
        android:background="#6D9773"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp">
    <ImageButton
        android:id="@+id/mess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/mess"
        android:padding="40dp"
        android:defaultFocusHighlightEnabled="true"
        android:src="@drawable/baseline_food_bank_24"
        android:background="#6D9773" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="15dp">
    <ImageButton
        android:id="@+id/medical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:src="@drawable/baseline_medical_information_24"
        android:layout_weight="1"
        android:padding="40dp"
        android:contentDescription="@string/medical"
        android:background="#6D9773"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>
</ScrollView>