<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#fff"
    tools:context=".register"
    android:padding="30dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="top|center"
        android:text="@string/register"
        android:textColor="@color/secondColor"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/secondColor"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        tools:ignore="TextFields"
        android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/Password"
        android:textColorHint="@color/secondColor"
        android:inputType="textPassword"
        android:padding="16dp"
        tools:ignore="TextFields"
        android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
    <EditText
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="Confirm Password"
        android:textColorHint="@color/secondColor"
        android:inputType="textPassword"
        android:padding="16dp"
        tools:ignore="TextFields"
        android:textStyle="bold"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_marginTop="10sp"
        android:text="Terms And Conditions"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:id="@+id/check_TC"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_reg"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerbtn"
        android:backgroundTint="@color/secondColor"
        android:textStyle="bold"
        android:textColor="#fff"
        android:paddingHorizontal="30dp"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/Loginnow"
        android:text="Click to Login"
        android:textColor="@color/secondColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>